worked on 'input of type number' issue not showing placeholder on firefox

--- a/css/main.css
+++ b/css/main.css
@@ -741,21 +741,22 @@ Our Menu Section
     border-style: solid;
     border-width: 1px;
     outline: none;
+    line-height: inherit;
     -webkit-transition: border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
     -moz-transition: border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
     -ms-transition: border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
     -o-transition: border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
     transition: border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out; }
-    /* line 50, ../sass/partials/_contact.scss */
+    /* line 51, ../sass/partials/_contact.scss */
     .contact-form input:hover,
     .contact-form textarea:hover {
       border-color: #B6CF34; }
-    /* line 54, ../sass/partials/_contact.scss */
+    /* line 55, ../sass/partials/_contact.scss */
     .contact-form input:focus,
     .contact-form textarea:focus {
       box-shadow: 0 0 8px rgba(182, 207, 52, 0.5);
       border-color: #B6CF34; }
-  /* line 60, ../sass/partials/_contact.scss */
+  /* line 61, ../sass/partials/_contact.scss */
   .contact-form button {
     background: #70A330;
     border: none;
@@ -771,12 +772,12 @@ Our Menu Section
     -ms-transition: background 0.3s ease-in-out;
     -o-transition: background 0.3s ease-in-out;
     transition: background 0.3s ease-in-out; }
-    /* line 71, ../sass/partials/_contact.scss */
+    /* line 72, ../sass/partials/_contact.scss */
     .contact-form button:hover, .contact-form button:focus {
       background: #B6CF34;
       cursor: pointer; }
 
-/* line 80, ../sass/partials/_contact.scss */
+/* line 81, ../sass/partials/_contact.scss */
 .message {
   color: #f44336; }
 
