--- a/sass/partials/_contact.scss
+++ b/sass/partials/_contact.scss
@@ -45,6 +45,7 @@
 		border-style: solid;
 		border-width: 1px;
 		outline: none;
+		line-height: inherit;
 		@include transition(border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out);
 
 		&:hover {
